Changelog

$Id: Changes,v 1.13 2003-09-25 11:43:04 oops Exp $

* thu, Sep 25 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed tmp variable reset size

* sat, Sep 20 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed return wrong value on str2long, str2double function

* Sat, Sep 20 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed gabage problem on lib_preg_parse function
	- added olibc_version function
	- release 0.0.3

* Fri, Sep 19 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed blank return fileread function
	- move to libfile.h from libstring.h on fileread function
	- added writefile function
	- removed strip option on Makefile

* Thu, Sep 18 2003
	by JoungKyun Kim <http://www.oops.org>
	- changed exit to return when not racecode domain on _race.c
	- added CVS id

* Sun, Sep 14 2003
	by JoungKyun Kim <http://www.oops.org>
	- fixed group expression bug on lib_preg_match function
	- modified Makefile
	- fixed typo man page

* Tue, Sep 09 2003
	by JoungKyun Kim <http://www.oops.org>
	- added internal pcre library
	- added internal idn library
	- fixed typo
	- release 0.0.2

* Mon, Sep 08 2003
	by JoungKyun Kim <http://www.oops.org>
	- relase 0.0.1
