@@ -1,6 +1,10 @@
 Changelog
 
-$Id: Changes,v 1.13 2003-09-25 11:43:04 oops Exp $
+$Id: Changes,v 1.14 2003-09-26 04:42:31 oops Exp $
+
+* fri, Sep 26 2003
+	by JoungKyun Kim <http://www.oops.org>
+	- changed to real size intead of sizeof on memset
 
 * thu, Sep 25 2003
 	by JoungKyun Kim <http://www.oops.org>
